# snogray

./: +sync.~1~  +sync.~2~  +sync.~3~  .arch-inventory  .gdbinit  .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  NEWS  README  README.building  README.usage  README.utils  TODO  add-glare.cc  add-glare.h  all-in-one.lua  arith-tex.cc  arith-tex.h  arith-tex.tcc  autogen.sh  bbox-io.cc  bbox-io.h  bbox.cc  bbox.h  board1.msh  board2.msh  board3.msh  box-filt.h  box.cc  box.h  brdf.cc  brdf.h  bsdf.h  bunny500.msh  camera-cmdline.lua  camera-cmds.cc  camera-cmds.h  (+541 more)
camera/: Makefile.am  camera-cmdline.lua  camera.cc  camera.h  camera.swg
cli/: .gitignore  Makefile.am  build-info.h  cmdlineparser.cc  cmdlineparser.h  cmdlineparser.lua  tty-progress.cc  tty-progress.h  update-build-info.sh  update-version.sh
color/: Makefile.am  color-io.cc  color-io.h  color-math.h  color.cc  color.h  color.swg  tint-io.cc  tint-io.h  tint.h
doc/: Makefile.am  building.txt  issues.txt  process-txtin.awk  tools.txt  usage.txt
geometry/: Makefile.am  bbox-io.cc  bbox-io.h  bbox.cc  bbox.h  cone-sample.h  coord.lua  coords.h  cyl-xform.cc  cyl-xform.h  dir-hist-dist.h  dir-hist.h  disk-sample.h  geometry.swg  hist-2d-dist.h  hist-2d.h  local-xform.cc  local-xform.h  matrix4.h  matrix4.tcc  pos-io.cc  pos.h  quadratic-roots.h  ray-io.cc  ray.h  sphere-isec.h  sphere-sample.h  spherical-coords.h  tangent-disk-sample.h  transform.lua  tripar-isec.h  tuple3.h  uv-io.cc  uv-io.h  vec-io.cc  vec-io.h  vec.h  xform-io.cc  xform-io.h  xform.h
glare/: Makefile.am  add-glare.h  glare-deps.mk  photopic-glare-psf.cc  photopic-glare-psf.h
image/: Makefile.am  image-box-filt.h  image-byte-vec.cc  image-byte-vec.h  image-deps.mk  image-dispatch.cc  image-exr.cc  image-exr.h  image-filter-conv.h  image-filter.cc  image-filter.h  image-gauss-filt.h  image-input-cmdline.h  image-input.h  image-io.cc  image-io.h  image-jpeg.cc  image-jpeg.h  image-pfm.cc  image-pfm.h  image-png.cc  image-png.h  image-ppm.cc  image-ppm.h  image-rgbe.cc  image-rgbe.h  image-sampled-output-cmdline.cc  image-sampled-output-cmdline.h  image-sampled-output-cmdline.lua  image-sampled-output.cc  image-sampled-output.h  image-scaled-output-cmdline.h  image-scaled-output.cc  image-scaled-output.h  image-tga.cc  image-tga.h  image-triangle-filt.h  image.h  image.lua  image.swg  (+4 more)
imagecli/: Makefile.am  image-sampled-output-cmdline.cc
intersect/: Makefile.am  intersect.cc  intersect.h  ray-io.cc
liblpeg/: Makefile.am
liblua/: Makefile.am
light/: Makefile.am  envmap-light.cc  envmap-light.h  far-light.cc  far-light.h  light-map.h  light-sampler.h  light.h  light.lua  light.swg  point-light.cc  point-light.h  sphere-light-sampler.cc  sphere-light-sampler.h  sphere-light.cc  sphere-light.h  surface-light-sampler.cc  surface-light-sampler.h  surface-light.cc  surface-light.h
load/: Makefile.am  load-3ds.cc  load-3ds.h  load-deps.mk  load-nff.lua  load.lua  load.swg
lua/: Makefile.am  invoke-lua-driver.cc  invoke-lua-driver.h  lua-deps.mk  lua-funs.cc  lua-setup.cc  lua-setup.h  module-setup.lua
lua-util/: Makefile.am  file.lua  lpeg-utils.lua  lua-compat.h  lua-cvt-num-vector.swg  lua-util.cc  lua-util.h  lua-val-table.cc  lua-val-table.h  lua-val-table.swg  lua-vector.cc  lua-vector.h  lua-vector.tcc  string.lua  swig.lua  table.lua
material/: Makefile.am  bsdf.h  cook-torrance.cc  cook-torrance.h  cos-dist.h  dist.h  fresnel.h  glass.cc  glass.h  glow.cc  glow.h  lambert.cc  lambert.h  material-dict.cc  material-wrapper.cc  material-wrapper.h  material.cc  material.h  material.lua  material.swg  media.cc  medium.h  mirror.cc  mirror.h  norm-glow.cc  norm-glow.h  phong-dist.h  phong.cc  phong.h  stencil.cc  stencil.h  thin-glass.cc  thin-glass.h  xform-material.cc  xform-material.h
old/: .gitignore  Makefile.am  README  aa-filt-test.c  sample-map.cc  spd.txt  tvec.cc  tvec2.cc
photon/: Makefile.am  photon-eval.cc  photon-map.cc  photon-map.h  photon-shooter.cc  photon-shooter.h
render/: Makefile.am  direct-illum.cc  direct-illum.h  direct-integ.h  global-render-state.cc  global-render-state.h  grid.cc  intersect.cc  intersect.h  path-integ.cc  path-integ.h  photon-integ.cc  recursive-integ.cc  recursive-integ.h  render-cmdline.lua  render-context.cc  render-context.h  render-params.h  render-stats.cc  render.lua  render.swg  sample-set.cc  sample-set.h  scene.cc  scene.h  scene.swg  surface-integ.h  zero-surface-integ.h
render-mgr/: Makefile.am  render-cmdline.lua  render-mgr.cc  render-mgr.h  render-mgr.swg  render-packet.h  render-queue.cc  render-queue.h  render-thread.cc  render-thread.h  renderer.cc  renderer.h  wire-frame.h
scene/: Makefile.am  camera-cmdline.lua  camera.cc  camera.h  camera.lua  camera.swg  scene.cc  scene.h  scene.lua  scene.swg
scenecli/: Makefile.am  scene-cmdline.cc  scene-cmdline.h
snograw/: .gitignore  Makefile.am  common.swg  snograw.swg
space/: Makefile.am  accel.lua  isec-cache.h  octree-builder.cc  octree-node.h  octree.cc  octree.h  space-builder.h  space.cc  space.h  space.swg  triv-space.h
surface/: Makefile.am  cylinder.cc  cylinder.h  ellipse.cc  ellipse.h  instance.cc  instance.h  local-primitive.h  local-surface.h  mesh.cc  mesh.h  model.cc  model.h  primitive.cc  primitive.h  sphere.cc  sphere.h  sphere2.cc  sphere2.h  surface-group.cc  surface-group.h  surface-renderable.h  surface.cc  surface.h  surface.lua  surface.swg  tessel-param.cc  tessel-param.h  tessel-sinc.cc  tessel-sinc.h  tessel-sphere.cc  tessel-torus.cc  tessel-torus.h  tessel.cc  tessel.h  tripar.cc  tripar.h
texture/: Makefile.am  arith-tex.h  arith-tex.tcc  cmp-tex.h  cmp-tex.tcc  cubemap.cc  cubemap.h  envmap.h  grey-tex.h  intens-tex.h  interp-tex.h  matrix-linterp.h  matrix-tex.cc  matrix-tex.h  matrix-tex.tcc  misc-map-tex.h  perlin-tex.h  perlin.cc  perlin.h  rescale-tex.h  spheremap.cc  spheremap.h  tex-coords.h  tex.h  texture.lua  texture.swg  worley.cc  worley.h  xform-tex.h
util/: .gitignore  Makefile.am  compiler.h  deletion-list.h  excepts.h  file-funs.cc  file-funs.h  file.lua  (+25 more)
(+25 files in other folders)
